numpy/typing/tests/data/fail/numerictypes.pyi
import numpy as np

np.issubsctype(1, np.int64)  # E: incompatible type

np.issubdtype(1, np.int64)  # E: incompatible type
